hphp/test/zend/good/ext-sqlite3/sqlite3_lasterrormsg_with_params.php
<?php
$db = new SQLite3(':memory:');
var_dump($db->lastErrorMsg('invalid argument'));
echo "Done\n";
?>